--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #161616
+}
+.block {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+}
+.App {
+  display: flex;
+  justify-content: space-around;
+}
+img {
+  width: 500px;
+}
+.cartIcon {
+  width: 70px;
+}
+.categoryButtonSelected {
+  background-color: green;
+}
+.categoryButton:hover {
+  background-color: #fde666;
+}
+.categoryButton {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+}
+.icon {
+  width: 20px;
+}
+p, h1, h2, button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background-color: #fdeb6b;
+  margin-top: 30px;
+  margin-left: 10px;
 }
